Criando interface de cadastro e login

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,9 @@
             android:layout_marginRight="4dp"
             android:layout_weight="1"
             android:background="@color/btnLogin"
-            android:text="Entrar" />
+            android:onClick="abrirTelaLogin"
+            android:text="Entrar"
+            android:textColor="@color/white" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonCadastrar"
@@ -50,6 +52,8 @@
             android:layout_marginLeft="4dp"
             android:layout_weight="1"
             android:background="@color/btnCadastro"
-            android:text="Cadastrar" />
+            android:onClick="abrirTelaCadastro"
+            android:text="Cadastrar"
+            android:textColor="@color/white" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
