--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,13 @@
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
+
+    <style name="Theme.Uber.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Uber.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Uber.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
