--- a/app/src/main/res/layout/activity_passageiro.xml
+++ b/app/src/main/res/layout/activity_passageiro.xml
@@ -24,15 +24,55 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="80dp"
+        android:layout_marginRight="16dp"
         android:background="@android:color/white"
-        android:padding="8dp"
         android:orientation="vertical"
+        android:padding="8dp"
 
-        ></LinearLayout>
+        >
+
+        <EditText
+            android:id="@+id/editLocal"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@android:color/white"
+            android:drawableLeft="@drawable/circulo_verde"
+            android:drawablePadding="6dp"
+            android:ems="10"
+            android:enabled="false"
+            android:hint="Meu local"
+            android:inputType="textPersonName"
+            android:textColor="@android:color/darker_gray"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/editDestino"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@android:color/white"
+            android:drawableLeft="@drawable/circulo_verde"
+            android:drawableTint="@android:color/darker_gray"
+            android:drawablePadding="6dp"
+            android:ems="10"
+            android:hint="Digite seu destino"
+            android:inputType="textPersonName"
+            android:textColor="@android:color/darker_gray"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonChamarUber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:text="Chamar Uber"
+        android:theme="@style/botaoPadrao"/>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
