Recuperando localização de usuário

--- a/app/src/main/res/layout/activity_passageiro.xml
+++ b/app/src/main/res/layout/activity_passageiro.xml
@@ -69,10 +69,10 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonChamarUber"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_gravity="bottom"
         android:text="Chamar Uber"
-        android:theme="@style/botaoPadrao"/>
+        android:theme="@style/botaoPadrao" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
