--- a/app/src/main/res/layout/activity_passageiro.xml
+++ b/app/src/main/res/layout/activity_passageiro.xml
@@ -71,6 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_gravity="bottom"
+        android:onClick="chamarUber"
         android:text="Chamar Uber"
         android:theme="@style/botaoPadrao" />
 
