--- a/app/src/main/res/layout/activity_requisicoes.xml
+++ b/app/src/main/res/layout/activity_requisicoes.xml
@@ -20,6 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Aguardando Requisições"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerRequisicoes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
