--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.hadesfranklyn.uber.activity.FirstFragment"
+        android:name="com.hadesfranklyn.uber.fragment.CorridaFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_corrida">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
