--- a/app/src/main/res/layout/activity_corrida.xml
+++ b/app/src/main/res/layout/activity_corrida.xml
@@ -31,4 +31,18 @@
         android:text="Aceitar corrida"
         android:theme="@style/botaoPadrao" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabRota"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="66dp"
+        android:backgroundTint="@android:color/holo_orange_dark"
+        android:src="@drawable/rota"
+        app:fabSize="normal"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
